# Ozon_parser

./: README.md  pyproject.toml
Parser/: article.txt  main.py  parser.py  working.py
